<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/app_btn_act_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_act_1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            style="@style/Widget.AppCompat.Button.Small"/>
    <Button
            android:text="@string/app_btn_act_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_act_2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_act_1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            style="@style/Widget.AppCompat.Button.Small"/>
    <TextView
            android:text="@string/string_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewResult" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_act_2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textSize="36sp"/>
    <Button
            android:text="@string/app_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_exp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>