<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThrActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_input" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="" android:hint="@string/app_text"/>
    <Button
            android:text="@string/app_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_confirm" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_input"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/app_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_finish_2"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button_confirm" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:onClick="finishMe"/>
</android.support.constraint.ConstraintLayout>